--- a/Contacts.html
+++ b/Contacts.html
@@ -35,8 +35,8 @@
 				<h1><a href="index.html" id="logo">Progress Business Company</a></h1>
 				<nav>
 					<ul id="menu">
-						<li id="nav1"><a href="index.html">Home<span>Welcome!</span></a></li>
-						<li id="nav2"><a href="News.html">News<span>Fresh</span></a></li>
+						<li id="nav1"><a href="index.html">主页<span>欢迎！</span></a></li>
+						<li id="nav2"><a href="News.html">新闻<span>咨询</span></a></li>
 						<li id="nav3"><a href="Services.html">Services<span>for you</span></a></li>
 						<li id="nav4"><a href="Products.html">Products<span>The best</span></a></li>
 						<li id="nav5" class="active"><a href="Contacts.html">Contacts<span>Our Address</span></a></li>
