--- a/Contacts.html
+++ b/Contacts.html
@@ -37,9 +37,9 @@
 					<ul id="menu">
 						<li id="nav1"><a href="index.html">主页<span>欢迎！</span></a></li>
 						<li id="nav2"><a href="News.html">新闻<span>咨询</span></a></li>
-						<li id="nav3"><a href="Services.html">Services<span>for you</span></a></li>
-						<li id="nav4"><a href="Products.html">Products<span>The best</span></a></li>
-						<li id="nav5" class="active"><a href="Contacts.html">Contacts<span>Our Address</span></a></li>
+						<li id="nav3"><a href="Services.html">为您<span>服务</span></a></li>
+						<li id="nav4"><a href="Products.html">最好的<span>产品</span></a></li>
+						<li id="nav5" class="active"><a href="Contacts.html">Contacts<span>联系我们</span></a></li>
 					</ul>
 				</nav>
 				</div>
